<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon_cost_of_service"
        app:srcCompat="@drawable/ic_store"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cost_of_service"
        app:layout_constraintBottom_toBottomOf="@id/cost_of_service" />
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"

    android:id="@+id/cost_of_service"
    android:hint="@string/cost_of_service"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.004"
    app:layout_constraintStart_toEndOf="@id/icon_cost_of_service">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/cost_of_service_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        />
</com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon_service_question"
        app:srcCompat="@drawable/ic_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/how_was_service"
        app:layout_constraintBottom_toBottomOf="@+id/how_was_service"/>
    <TextView
        android:id="@+id/how_was_service"
        android:layout_width="0dp"
        style="@style/Widget.TipTime.TextView"
        android:layout_height="wrap_content"
        android:text="@string/how_was_service"
        android:paddingStart="16dp"
        app:layout_constraintStart_toEndOf="@id/icon_service_question"
        app:layout_constraintTop_toBottomOf="@+id/cost_of_service" />

    <RadioGroup
        android:id="@+id/type_of_service"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/how_was_service"
        app:layout_constraintTop_toBottomOf="@+id/how_was_service"
        android:checkedButton="@id/amazing_option">
        <!--Radio Buttons-->
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_20"
            android:id="@+id/amazing_option"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_15"
            android:id="@+id/good_option"/>
        <RadioButton
            android:id="@+id/okay_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay_10"/>
    </RadioGroup>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon_round_up"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_round_up"
        app:layout_constraintTop_toTopOf="@id/round_up"
        app:layout_constraintBottom_toBottomOf="@id/round_up"/>
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/type_of_service"
        app:layout_constraintStart_toEndOf="@id/icon_round_up"
        android:text="@string/round_up_tip"
        android:paddingStart="26dp"
        android:checked="true"
        android:id="@+id/round_up"/>


    <Button
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/calculate_tip_button"
        app:layout_constraintTop_toBottomOf="@id/round_up"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/calculate"/>
    <TextView
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/result_tip"
        app:layout_constraintTop_toBottomOf="@id/calculate_tip_button"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/tip_result"
        android:textAlignment="center"
        tools:text="Tip Amount : 10rs"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>